HomeLayout and GenerateForm1 ready and switching windows

--- a/UI/GenerateForm1Layout.ui
+++ b/UI/GenerateForm1Layout.ui
@@ -16,9 +16,9 @@
   <widget class="QLabel" name="ExistingPGPLabel">
    <property name="geometry">
     <rect>
-     <x>90</x>
-     <y>0</y>
-     <width>251</width>
+     <x>70</x>
+     <y>10</y>
+     <width>291</width>
      <height>51</height>
     </rect>
    </property>
@@ -32,6 +32,19 @@
    </property>
    <property name="text">
     <string>Already  have a PGP Key?</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="pushButton">
+   <property name="geometry">
+    <rect>
+     <x>140</x>
+     <y>200</y>
+     <width>111</width>
+     <height>41</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Exit</string>
    </property>
   </widget>
  </widget>
