--- a/UI/VideoVerificationFormLayout.ui
+++ b/UI/VideoVerificationFormLayout.ui
@@ -23,7 +23,7 @@
     </rect>
    </property>
   </widget>
-  <widget class="QLabel" name="label">
+  <widget class="QLabel" name="fingerprintLabel">
    <property name="geometry">
     <rect>
      <x>30</x>
@@ -44,7 +44,7 @@
     <string>Key fingerprint: 0C8E5995CD1770E5936D288ED98029C596F20E5D</string>
    </property>
   </widget>
-  <widget class="QLabel" name="label_2">
+  <widget class="QLabel" name="keyExpirationLabel">
    <property name="geometry">
     <rect>
      <x>560</x>
@@ -65,7 +65,7 @@
     <string>Key expiration: 27 October 2014</string>
    </property>
   </widget>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>530</x>
