--- a/UI/KeySavedFormLayout.ui
+++ b/UI/KeySavedFormLayout.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>315</width>
-    <height>304</height>
+    <width>363</width>
+    <height>398</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,18 +16,21 @@
   <widget class="QGraphicsView" name="checkMarkGraphicsView">
    <property name="geometry">
     <rect>
-     <x>30</x>
+     <x>0</x>
      <y>10</y>
-     <width>256</width>
-     <height>192</height>
+     <width>371</width>
+     <height>291</height>
     </rect>
+   </property>
+   <property name="viewportUpdateMode">
+    <enum>QGraphicsView::FullViewportUpdate</enum>
    </property>
   </widget>
   <widget class="QLabel" name="keyIsLabel">
    <property name="geometry">
     <rect>
-     <x>-20</x>
-     <y>210</y>
+     <x>0</x>
+     <y>300</y>
      <width>341</width>
      <height>41</height>
     </rect>
@@ -47,8 +50,8 @@
   <widget class="QPushButton" name="okayButton">
    <property name="geometry">
     <rect>
-     <x>80</x>
-     <y>260</y>
+     <x>100</x>
+     <y>350</y>
      <width>131</width>
      <height>41</height>
     </rect>
