--- a/UI/PrivateKeySelectorDialog.ui
+++ b/UI/PrivateKeySelectorDialog.ui
@@ -73,6 +73,9 @@
      <pointsize>14</pointsize>
     </font>
    </property>
+   <property name="echoMode">
+    <enum>QLineEdit::Password</enum>
+   </property>
   </widget>
  </widget>
  <resources/>
